# scorecard-overlay

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: dev-server.mjs
src/: live-score.js  main.js  mock-score.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
